--- a/assets/css/_solutions.scss
+++ b/assets/css/_solutions.scss
@@ -4,8 +4,13 @@
     max-width: 1024px;
     margin: 0 auto;
     position: relative;
-    min-height: 600px;
+    min-height: 630px;
     margin-top: 4rem;
+
+    &__container {
+        width: 100%;
+        margin: 0 auto;
+    }
 
     @include breakpoint-down(medium) {
         width: 85%;
@@ -30,7 +35,8 @@
     }
 
     &__cards {
-        display: flex;
+        display: grid;
+        grid-template-columns: repeat(3,1fr);
         gap: 1rem;
     }
 
@@ -41,12 +47,17 @@
         }
     }
 
+    &__wrapper {
+        
+    }
+
     &__card {
         //background-color: $lightestYellow;
+        justify-content: center;
         border-radius: 1rem;
         padding: $mb-2;
-        justify-content: center;
         display: flex;
+        position: relative;
         cursor: pointer;
 
         @include breakpoint-down(medium) {
@@ -56,7 +67,6 @@
             }
         }
     }
-
 
     &__card:hover,
     &__card:active {
@@ -102,7 +112,9 @@
     &__description {
         text-align: center;
         text-decoration: none;
-        color: $darkGray;
+        color: $textGray;
+        margin-bottom: 0.5rem;
+        line-height: 1.6;
     }
 
     &__tags {
